--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,4 +44,19 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+
+    //search API
+    implementation 'com.google.code.gson:gson:2.8.7'
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+
+    //Coroutines
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.6.4'
+
+    //ViewMOdelLife
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.0"
+
+    //ConverterGson
+    implementation "com.squareup.retrofit2:converter-gson:2.8.6"
 }
