--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,7 @@ android {
 }
 
 dependencies {
+    def lifecycle_version = "2.5.0-alpha02"
 
     implementation 'androidx.core:core-ktx:1.9.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
@@ -59,4 +60,8 @@ dependencies {
 
     //ConverterGson
     implementation "com.squareup.retrofit2:converter-gson:2.8.6"
+
+    //lyfe
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
 }
