--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,6 +68,7 @@ dependencies {
     //Koin
     def koin_version = '3.4.0'
     implementation "io.insert-koin:koin-core:$koin_version"
+    implementation "io.insert-koin:koin-android:$koin_version"
     // Koin Test features
     testImplementation "io.insert-koin:koin-test:$koin_version"
     // Koin for JUnit 4
