--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,8 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'org.jetbrains.kotlin.android.extensions'
+    id 'kotlin-kapt'
 }
 
 android {
@@ -64,6 +66,12 @@ dependencies {
     //lyfe
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
+
+    //Room DB
+    implementation'androidx.room:room-runtime:2.3.0'
+    implementation'androidx.room:room-ktx:2.3.0'
+    kapt 'androidx.room:room-compiler:2.3.0'
+    androidTestImplementation'androidx.room:room-testing:2.3.0'
 
     //Koin
     def koin_version = '3.4.0'
