--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,7 @@
         tools:targetApi="31">
         <activity
             android:name=".presentation.main.activity.MainActivity"
+            android:theme="@style/Theme.KanyeRest.NoActionBar"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -24,6 +25,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
 
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".presentation.main.activity.HistoricActivity"
+            android:exported="false"
+            android:parentActivityName=".presentation.main.activity.MainActivity">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
